# OOP_LAB2_sem2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  report.docx  test.cpp
docs/: index.html  main.js  main.wasm
emscripten/: CMakeLists.txt  graph_data.txt  main.cpp  sparse_graph_data.txt
emscripten.index/: index.html  main.js  main.wasm
emscripten/include/: algorithms.tpp  algorithms_window.h  field.h  main.h  sparse_graph_view.h  utils.h  utils.tpp
emscripten/src/: algorithms_window.cpp  field.cpp  graph.cpp  sparse_graph_view.cpp  utils.cpp
include/: algorithms.tpp  algorithms_window.h  control_window.h  field.h  ggg.h  graph.h  graph.tpp  linked_list.tpp  sparse_graph_view.h  utils.tpp  vec2.h
libs/: CMakeLists.txt
src/: algorithms_window.cpp  control_window.cpp  field.cpp  ggg.cpp  graph.cpp  linked_list.tpp  sparse_graph_view.cpp  vec2.cpp  vec2.tpp
svelte/: package-lock.json  package.json  vite.config.ts
svelte/src/emscripten/: TestEmscripten.svelte  ems_watcher.ts
svelte/src/lib/: index.html  main.js  main.wasm
svelte/src/routes/: +page.svelte
